# vuExpert

./: .dependency-cruiser.cjs  .dockerignore  .editorconfig  .env.example  .gitignore  .lighthouserc.json  .stylelintrc.cjs  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js  vitest.config.js
.github/: README.md
.github/workflows/: ci.yml
.qodo/: README.md
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: README.md  crud.py  database.py  main.py  models.py  redis_client.py  schemas.py  settings.py
backend/app/routers/: counter.py  health.py  items.py  logs.py  users.py
backend/tests/: README.md  conftest.py  test_crud.py  test_database.py  test_main.py
docs/: ARCHITECTURE_PLAN.md  IMPLEMENTATION_DETAILS.md  PROJECT_REPLICATION_PROMPT.md  README.md  ai_developer_guide.md  docker_redis_plan.md  environment_variables.md  poetry_migration_plan.md  primevue_integration_guide.md  project_architecture_and_philosophy.md  qwen_coder_integration.md  vuetify_integration.md
docs/curriculum/: GLOSSARY.md  LEARNING_PLAN.md  MASTER_PROMPT.md  META-PROMT.md  MODULE_ASSESSMENT.md  README.md  ROADMAP.md  alembic_cookbook.md  auth.md  (+25 more)
e2e/: README.md  example.spec.js
knowledge-packs/: README.md  agents-context-v1.md  cross-model-review-v1.md  depcruise-rules-v1.md  git-discipline-v1.md  tdd-loop-v1.md
src/: App.vue  README.md  env.d.ts  main.js  main.ts  vuetify.js
(+48 files in other folders)
