[project]
name = "vuexpert-backend"
version = "0.1.0"
description = "VueExpert Backend (FastAPI, SQLAlchemy async)"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "redis",
    "aiosqlite",
    "httpx",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg",
    "pydantic-settings",
    "slowapi",
    "email-validator",
]

[tool.poetry]
packages = [{ include = "app" }]
[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
testcontainers = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"